<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2010 Google Inc. Licensed under the Apache License, Version 
	2.0 (the "License"); you may not use this file except in compliance with 
	the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/home_root" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:background="@color/background2">

	<LinearLayout style="@style/TitleBar">
		<ImageView style="@style/TitleBarLogo"
			android:contentDescription="@string/description_logo" android:src="@drawable/title_logo" />

		<View style="@style/TitleBarSpring" />
	</LinearLayout>
	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:background="@color/background2" android:fillViewport="true" android:layout_weight="10">
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" android:background="@color/background2">

			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="5" android:paddingTop="20dip"
				android:paddingBottom="20dip" android:paddingRight="7px"
				android:background="@color/background1">
				<Button android:id="@+id/menu_btn_gamestart" style="@style/HomeButton"
					android:onClick="onNewGameClick" android:text="@string/btn_newGame"
					android:drawableTop="@drawable/menu_btn_gamestart" />
				<Button android:id="@+id/menu_btn_instructions" style="@style/HomeButton"
					android:onClick="onMenuClick" android:text="@string/btn_menu"
					android:drawableTop="@drawable/menu_btn_instructions" />

			</LinearLayout>

			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="5" android:paddingTop="10dip"
				android:paddingBottom="10dip" android:paddingRight="0dip"
				android:background="@color/background2">
				<TextView style="@style/HighScoreText" android:text="GAME OVER"
					android:id="@+id/tv_score_text" android:layout_width="wrap_content"
					android:layout_height="wrap_content"></TextView>
				<TextView style="@style/HighScoreText" android:text="Your Score"
					android:id="@+id/tv_score_points" android:layout_width="wrap_content"
					android:layout_height="wrap_content"></TextView>
			</LinearLayout>

			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_weight="50" android:layout_gravity="bottom"
				android:paddingTop="10dip" android:background="@color/background2">
				<TextView style="@style/HighScoreTextBold" android:text="Highscore"
					android:id="@+id/tv_highscore_title_text" android:layout_width="wrap_content"
					android:layout_height="wrap_content"></TextView>
				<LinearLayout android:orientation="horizontal"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView style="@style/HighScoreText" android:text="1. "
						android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
					<TextView style="@style/HighScoreText" android:text="0pkt"
						android:id="@+id/tv_highscore_1_text" android:layout_width="wrap_content"
						android:layout_height="wrap_content"></TextView>
				</LinearLayout>
				<LinearLayout android:orientation="horizontal"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView style="@style/HighScoreText" android:text="2. "
						android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
					<TextView style="@style/HighScoreText" android:text="0pkt"
						android:id="@+id/tv_highscore_2_text" android:layout_width="wrap_content"
						android:layout_height="wrap_content"></TextView>
				</LinearLayout>
				<LinearLayout android:orientation="horizontal"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView style="@style/HighScoreText" android:text="3. "
						android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
					<TextView style="@style/HighScoreText" android:text="0pkt"
						android:id="@+id/tv_highscore_3_text" android:layout_width="wrap_content"
						android:layout_height="wrap_content"></TextView>
				</LinearLayout>
				<LinearLayout android:orientation="horizontal"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView style="@style/HighScoreText" android:text="4. "
						android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
					<TextView style="@style/HighScoreText" android:text="0pkt"
						android:id="@+id/tv_highscore_4_text" android:layout_width="wrap_content"
						android:layout_height="wrap_content"></TextView>
				</LinearLayout>
				<LinearLayout android:orientation="horizontal"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView style="@style/HighScoreText" android:text="5. "
						android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
					<TextView style="@style/HighScoreText" android:text="0pkt"
						android:id="@+id/tv_highscore_5_text" android:layout_width="wrap_content"
						android:layout_height="wrap_content"></TextView>
				</LinearLayout>
			</LinearLayout>	

		</LinearLayout>

	</ScrollView>
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:myapp="http://schemas.android.com/apk/res/de.swagner.homeinvasion"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="50dip" android:layout_weight="1">
		<com.admob.android.ads.AdView android:id="@+id/ad"
			android:layout_width="fill_parent" android:layout_height="50dip"
			myapp:backgroundColor="#000000" myapp:primaryTextColor="#FFFFFF"
			myapp:secondaryTextColor="#CCCCCC" />
	</LinearLayout>

</LinearLayout>
